Modified dropdown component

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -335,9 +335,9 @@ block content
             inputValue: "2 спальни, 2 кровати...",
             inputPlaceholder: "Конфигурация номера...",
             menuItems: [
-              {subtitle: "спальни", count: "2"},
-              {subtitle: "кровати", count: "2"},
-              {subtitle: "ванные комнаты", count: "0"}
+              {subject: "bedrooms", subtitle: "спальни", count: "2"},
+              {subject: "beds", subtitle: "кровати", count: "2"},
+              {subject: "bathrooms", subtitle: "ванные комнаты", count: "0"}
             ]
           })
           +dropdown({
@@ -349,9 +349,9 @@ block content
             inputValue: "2 спальни, 2 кровати...",
             inputPlaceholder: "Конфигурация номера...",
             menuItems: [
-              {subtitle: "спальни", count: "2"},
-              {subtitle: "кровати", count: "2"},
-              {subtitle: "ванные комнаты", count: "0"}
+              {subject: "bedrooms", subtitle: "спальни", count: "2"},
+              {subject: "beds", subtitle: "кровати", count: "2"},
+              {subject: "bathrooms", subtitle: "ванные комнаты", count: "0"}
             ]
           })
           +dropdown({
@@ -363,9 +363,9 @@ block content
             inputPlaceholder: "Сколько гостей",
             isInputBorderRounded: true,
             menuItems: [
-              {subtitle: "взрослые", count: "0"},
-              {subtitle: "дети", count: "0"},
-              {subtitle: "младенцы", count: "0"}
+              {subject: "adults", subtitle: "взрослые", count: "0"},
+              {subject: "children", subtitle: "дети", count: "0"},
+              {subject: "infants", subtitle: "младенцы", count: "0"}
             ]
           })
           +dropdown({
@@ -378,8 +378,8 @@ block content
             inputPlaceholder: "Сколько гостей",
             isInputBorderRounded: true,
             menuItems: [
-              {subtitle: "взрослые", count: "0"},
-              {subtitle: "дети", count: "0"},
-              {subtitle: "младенцы", count: "0"}
+              {subject: "adults", subtitle: "взрослые", count: "0"},
+              {subject: "children", subtitle: "дети", count: "0"},
+              {subject: "infants", subtitle: "младенцы", count: "0"}
             ]
           })
