--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -165,6 +165,10 @@
     width: 100%;
     @include set-flex($flexWrap: wrap);
   }
+
+  &__datepicker {
+    position: relative;
+  }
 }
 
 @import '../../templates/components/h1-title/h1-title';
@@ -187,3 +191,4 @@
 @import '../../templates/components/range-slider/range-slider';
 @import '../../templates/components/pagination/pagination';
 @import '../../templates/components/dropdown/dropdown';
+@import '../../templates/components/datepicker-field/datepicker-field';
