Modified date-dropdown and text-field components, added jquery-mask-input plugin

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -217,7 +217,7 @@ block content
               name: "field",
               type: "email",
               placeholder: "Email",
-              required: false
+              required: false,
             })
             +text-field({
               isActive: true,
