--- a/src/templates/components/text-field/_text-field.scss
+++ b/src/templates/components/text-field/_text-field.scss
@@ -26,8 +26,7 @@
   }
 
   &__label {
-    position: relative;
-    width: 100%;
+    @include set-flex($mainAxis: space-between, $gap: 1rem);
     margin-bottom: 0.5rem;
     @include label-cta-text();
     text-transform: uppercase;
@@ -35,8 +34,6 @@
   }
 
   &__state {
-    position: absolute;
-    right: 0;
     font-weight: 400;
     color: $darkShade50;
     letter-spacing: -0.02rem;
