--- a/src/templates/components/text-field/_text-field.scss
+++ b/src/templates/components/text-field/_text-field.scss
@@ -23,6 +23,32 @@
 
     }
 
+    &_padding-right {
+      &_big {
+        padding-right: 4.4rem;
+      }
+    }
+    &-container {
+      position: relative;
+      display: inline-block;
+      width: 100%;
+      cursor: pointer;
+    }
+
+    &-icon {
+      position: absolute;
+      top: 0;
+      right: 0;
+      @include set-size(4.4rem);
+      @include flex-center();
+      @include set-font(2.4rem, 400, 2.4rem, $darkShade50, "Material Icons", 'icons');
+
+      &_gradient {
+        background-image: $primaryGradient;
+        background-clip: text;
+        color: transparent;
+      }
+    }
   }
 
   &__label {
