--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -30,7 +30,7 @@ block includes
   include ../../templates/components/range-slider/range-slider
   include ../../templates/components/pagination/pagination
   include ../../templates/components/dropdown/dropdown
-  include ../../templates/components/datepicker-field/datepicker-field
+  include ../../templates/components/datepicker-block/datepicker-block
 
 block content
   section.colors-type
@@ -383,4 +383,21 @@ block content
             ]
           })
         .form-elements__datepicker 
-          +datepicker({})
+          +datepicker-block({
+            multipleFields: true,
+            startDate: "08.19.2019",
+            endDate: "08.23.2019",
+            fields: {
+              field1: {
+                label: "date-dropdown",
+                name: "check-date",
+                placeholder: "ДД.ММ.ГГГГ"
+              },
+              field2: {
+                label: "date-dropdown",
+                name: "check-date",
+                value: "19.08.2019",
+                placeholder: "ДД.ММ.ГГГГ"
+              }
+            }
+          })
