--- a/src/templates/components/text-field/text-field.pug
+++ b/src/templates/components/text-field/text-field.pug
@@ -13,7 +13,7 @@ mixin text-field(options)
   if !options
     - options = {}
 
-  - const {label, state, icon, isActive, type, name, value, placeholder, isRequired, isDisabled, mask} = options
+  - const {label, state, icon, iconColor, isActive, type = "text", name, value, placeholder, isRequired, isDisabled, mask} = options
 
   .text-field
     label.text-field__container
@@ -21,27 +21,17 @@ mixin text-field(options)
         span.text-field__label= label 
           if state 
             span.text-field__state= state
-        if icon
-          span.text-field__input-container
-            input.text-field__input(
-              class = isActive ? "text-field__input_active" : "",
-              type = type ? type : "text", 
-              name = name, 
-              value = value
-              placeholder = placeholder, 
-              required = isRequired,
-              disabled = isDisabled,
-              data-mask = mask ? mask : null
-            )
-            span.text-field__input-icon= icon
-        else 
+        span.text-field__input-container
           input.text-field__input(
             class = isActive ? "text-field__input_active" : "",
-            type = type ? type : "text", 
+            class = icon ? "text-field__input_padding-right_big" : "",
+            type = type, 
             name = name, 
             value = value,
             placeholder = placeholder, 
             required = isRequired,
             disabled = isDisabled,
-            data-mask = mask ? mask : null
+            data-mask = mask
           )
+          if icon
+            span.text-field__input-icon(class = (iconColor === "gradient") ? "text-field__input-icon_gradient" : "")= icon
