Modified date-dropdown and text-field components

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -385,8 +385,7 @@ block content
         .form-elements__datepicker 
           +datepicker-block({
             multipleFields: true,
-            startDate: "08.19.2019",
-            endDate: "08.23.2019",
+            initialDateRange: {start: "08.19.2019", end: "08.23.2019"},
             fields: {
               field1: {
                 label: "date-dropdown",
