--- a/src/templates/components/datepicker-block/_datepicker-block.scss
+++ b/src/templates/components/datepicker-block/_datepicker-block.scss
@@ -1,7 +1,23 @@
 .datepicker-block {
+  position: relative;
   width: 100%;
   max-width: 320px;
   @include set-flex($crossAxis: center, $gap: 2rem);
+
+  &__field {
+    max-width: 150px;
+
+    &_big {
+      max-width: 266px;
+    }
+  }
+
+  &__service-field {
+    position: absolute;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+  }
 }
 
 .datepickers-container {
