--- a/src/templates/components/text-field/text-field.pug
+++ b/src/templates/components/text-field/text-field.pug
@@ -31,6 +31,7 @@ mixin text-field(options)
         placeholder = placeholder, 
         required = isRequired,
         disabled = isDisabled,
+        spellcheck = "false",
         data-mask = mask
       )
       if icon
