--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -400,3 +400,20 @@ block content
               }
             }
           })
+          +datepicker-block({
+            multipleFields: false,
+            initialDateRange: {start: "08.19.2019", end: "08.23.2019"},
+            fields: {
+              field1: {
+                label: "date filter dropdown",
+                name: "check-date",
+                placeholder: "ДД.ММ.ГГГГ"
+              },
+              field2: {
+                label: "date-dropdown",
+                name: "check-date-range",
+                value: "19.08.2019",
+                placeholder: "ДД.ММ.ГГГГ"
+              }
+            }
+          })
