Modified date-dropdown, subscription-field  and text-field components

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -231,9 +231,11 @@ block content
           .form-elements__text-fields-bottom
             +subscription-field({
               action: "add/link/to/server",
-              label: "subscription text field",
-              name: "subscription",
-              placeholder: "Email"
+              field: {
+                  label: "subscription text field",
+                  name: "subscription",
+                  placeholder: "Email"
+              }
             })
         .form-elements__like-buttons 
           .form-elements__like-buttons-title 
