--- a/src/templates/components/subscription-field/_subscription-field.scss
+++ b/src/templates/components/subscription-field/_subscription-field.scss
@@ -1,69 +1,6 @@
 .subscription-field {
+  width: 100%;
   max-width: 267px;
-
-  &__inner {
-    position: relative;
-  }
-
-  &__wrapper {
-    position: relative;
-    display: inline-block;
-    @include set-size(100%);
-  }
-
-  &__input {
-    display: inline-block;
-    @include set-size(100%, 4.4rem);
-    padding: 1.2rem 4.4rem 1.2rem 1.5rem;
-    border: none;
-    outline: none;
-    @include set-border($borderColor: $darkShade25, $borderRadius: 0.4rem);
-    @include set-font(1.4rem, 400, 2.4rem, $darkShade100, inherit);
-    letter-spacing: -0.02rem;
-
-    &::placeholder {
-      color: $darkShade25;
-    }
-
-    &:hover, &:focus, &_active {
-      border-color: $darkShade75;
-  
-      &::placeholder {
-        color: $darkShade75;
-      }
-    }
-  }
-
-  &__label {
-    position: absolute;
-    top: -2rem;
-    left: 0;
-    display: inline-block;
-    width: 100%;
-    @include label-cta-text();
-    text-transform: uppercase;
-    cursor: pointer;
-  }
-
-  &__button {
-    position: absolute;
-    top: 0;
-    right: 0;
-    border: none,;
-    outline: none;
-    background: none;
-    @include set-size(4.4rem);
-    cursor: pointer;
-
-    &::after {
-      content: "\e5c8";
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      @include set-font(2.4rem, 400, 2.4rem, transparent, "Material Icons", "icons");
-      background-image: $primaryGradient;
-      background-clip: text;
-    }
-  }
 }
+
+@import '../text-field/text-field';
